# quart-postgres-boilerplate

./: .gitignore  .quartenv  Dockerfile  README.md  alembic.ini  application.py  db.py  docker-compose.yml  env.py.bak  pyproject.toml  quart-postgres-boilerplate.code-workspace  settings.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: backend-ci-cd.yml  my-app-ci-cd.yml
backend-service/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  settings.toml
backend-service/migrations/: env.py
backend-service/migrations/versions/: 47c68318259a_create_counter_table.py
backend-service/my_app/: application.py  asgi.py  db.py  logger.py  manage.py
backend-service/my_app/counter_app/: models.py  views.py
backend-service/my_app/home_app/: views.py
backend-service/tests/: conftest.py
backend-service/tests/counter_app/: test_counter.py
counter/: models.py  views.py
migrations/versions/: 69b5799b2f78_create_counter_table.py
tests/: conftest.py  test_counter.py
