[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "A Quart counter application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "my_app"}]

[tool.poetry.dependencies]
python = "^3.10"
python-json-logger = "^2.0.7"
quart = "0.18.4"
werkzeug = "2.3.7"
dynaconf = "3.1.12"
psycopg2-binary = "^2.9.10"
databases = {version = "^0.9.0", extras = ["asyncpg"]}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
  /migrations/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
config_file = "mypy.ini"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v -s"
